--- a/public/static-sites/checkin/tonconnect-manifest.json
+++ b/public/static-sites/checkin/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
   "url": "https://checkin.mytonwallet.org",
-  "name": "MyTonWallet Check-in",
+  "name": "Gasless Check-in",
   "iconUrl": "https://checkin.mytonwallet.org/icon.png"
 }
