feat: off polling

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mytonwallet",
+  "name": "gasless",
   "version": "3.6.6",
   "description": "The most feature-rich web wallet and browser extension for TON – with support of multi-accounts, tokens (jettons), NFT, TON DNS, TON Sites, TON Proxy, and TON Magic.",
   "main": "index.js",
