--- a/mobile/ios/App/Podfile
+++ b/mobile/ios/App/Podfile
@@ -20,7 +20,6 @@ def capacitor_pods
   pod 'CapacitorFilesystem', :path => '../../../node_modules/@capacitor/filesystem'
   pod 'CapacitorHaptics', :path => '../../../node_modules/@capacitor/haptics'
   pod 'CapacitorKeyboard', :path => '../../../node_modules/@capacitor/keyboard'
-  pod 'CapacitorPushNotifications', :path => '../../../node_modules/@capacitor/push-notifications'
   pod 'CapacitorShare', :path => '../../../node_modules/@capacitor/share'
   pod 'CapacitorStatusBar', :path => '../../../node_modules/@capacitor/status-bar'
   pod 'CapawesomeCapacitorTorch', :path => '../../../node_modules/@capawesome/capacitor-torch'
@@ -36,7 +35,7 @@ def capacitor_pods
   pod 'CordovaPlugins', :path => '../capacitor-cordova-ios-plugins'
 end
 
-target 'MyTonWallet' do
+target 'GaslessWallet' do
   capacitor_pods
   # Add your Pods here
   pod 'FloatingPanel', :git => 'https://github.com/mytonwalletorg/FloatingPanel', :commit => '477fd70521abbb12eb7f069f0220660c172dc936'
